[package]
name = "aw-rs"
version = "0.1.0"
authors = ["ross <ross.pure@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.7.0"
parity-crypto = { version = "0.6.2", features = ["publickey"]}
rand = "0.7.3"
secp256k1 = { git = "https://github.com/renproject/secp256k1-rs" }
tokio = { version = "0.2.22", features = ["dns", "tcp", "io-util", "rt-threaded", "macros", "time"] }
futures = "0.3.6"
