[package]
name = "aw-rs"
version = "0.1.0"
authors = ["ross <ross.pure@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.7.0"
futures = "0.3.6"
libc = "0.2.79"
parity-crypto = { version = "0.6.2", features = ["publickey"]}
rand = "0.7.3"
secp256k1 = { git = "https://github.com/renproject/secp256k1-rs" }
sha2 = "0.9.1"
termios = "0.3.3"
tokio = { version = "0.2.22", features = ["blocking", "tcp", "dns", "io-std", "io-util", "rt-threaded", "macros", "time", "stream", "sync"] }
