[package]
name = "aw"
version = "0.1.0"
authors = ["ross <ross.pure@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.7.0"
ethereum-types = "0.9"
futures = "0.3.6"
parity-crypto = { version = "0.6.2", features = ["publickey"]}
rand = "0.7.3"
secp256k1 = { git = "https://github.com/renproject/secp256k1-rs" }
sha2 = "0.9.1"
tokio = { version = "0.2.22", features = ["blocking", "tcp", "dns", "io-std", "io-util", "rt-threaded", "macros", "time", "stream", "sync"] }

[dev-dependencies]
base64 = "0.13.0"
libc = "0.2.79"
termios = "0.3.3"
